--- a/2.DynamoCraft.UI/src/app/components/nouveautes/nouveautes.component.html
+++ b/2.DynamoCraft.UI/src/app/components/nouveautes/nouveautes.component.html
@@ -3,7 +3,7 @@
     <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 g-4 justify-content-center">
         @for (nouveaute of nouveautes; track nouveaute.id) {
         <div class="col d-flex align-items-stretch">
-            <a routerLink="/home" class="text-decoration-none w-100">
+            <a routerLink="/projet/detail/{{nouveaute.id}}" class="text-decoration-none w-100">
                 <div class="card-hover image-container rounded h-100 text-center shadow-sm border-0">
                     @if (nouveaute.imageProjet && nouveaute.imageProjet.length > 0) {
                     <img [src]="url + nouveaute.imageProjet[0].nom" class="card-img-top rounded" alt="Image du projet">
