--- a/2.DynamoCraft.UI/src/app/modules/projet/components/ajout/ajout.component.html
+++ b/2.DynamoCraft.UI/src/app/modules/projet/components/ajout/ajout.component.html
@@ -50,7 +50,7 @@
                         <label
                             class="btn btn-warning text-dark bg-warning ms-3 d-flex align-items-center justify-content-center"
                             style="width: 40px; height: 40px; border-radius: 50%;">
-                            <i class="bi bi-plus-lg"></i>
+                            <i class="bi bi-plus-lg text-white"></i>
                             <input #imageInput type="file" (change)="onImageSelected($event)" multiple accept="image/*"
                                 hidden>
                         </label>
@@ -67,23 +67,21 @@
                         <div *ngIf="selectedImages.length > 0" class="row">
                             <div *ngFor="let image of selectedImages; let i = index" class="col-4 p-2">
                                 <div class="position-relative image-container rounded">
-                                    <img [src]="imagePreviewUrls[i]" alt="Image ajoutée" class="card-img-top"
-                                        (click)="openImageModal(i)"
-                                        style="width: 100%; height: 200px; object-fit: cover; cursor: pointer;">
-
-
-                                    <div class="hover-content d-flex justify-content-center align-items-center position-absolute top-0 start-0 w-100 h-100"
-                                        (click)="openImageModal(i)">
-                                        <i class="bi bi-arrows-fullscreen text-white" style="font-size: 2rem;"></i>
-                                        <p class="file-name text-white text-center mt-2">{{ image.name }}</p>
+                                    <div class="card-hover image-container rounded h-100 text-center shadow-sm border-0">
+                                        <img [src]="imagePreviewUrls[i]" alt="Image ajoutée" class="card-img-top"
+                                            (click)="openImageModal(i)"
+                                            style="width: 100%; height: 200px; object-fit: cover; cursor: pointer;">
+                                        <div class="hover-content d-flex justify-content-center align-items-center position-absolute top-0 start-0 w-100 h-100"
+                                            (click)="openImageModal(i)">
+                                            <i class="bi bi-arrows-fullscreen text-white" style="font-size: 2rem;"></i>
+                                            <p class="file-name text-white text-center mt-2">{{ image.name }}</p>
+                                        </div>
+                                        <button type="button"
+                                            class="btn btn-danger position-absolute top-0 end-0 rounded-circle"
+                                            (click)="removeImage(i)">
+                                            <i class="bi bi-x text-white"></i>
+                                        </button>
                                     </div>
-
-                                    
-                                    <button type="button"
-                                        class="btn btn-danger position-absolute top-0 end-0 rounded-circle"
-                                        (click)="removeImage(i)">
-                                        <i class="bi bi-x"></i>
-                                    </button>
                                 </div>
                             </div>
                         </div>
@@ -97,7 +95,7 @@
                         <label
                             class="btn btn-warning text-dark bg-warning ms-3 d-flex align-items-center justify-content-center"
                             style="width: 40px; height: 40px; border-radius: 50%;">
-                            <i class="bi bi-plus-lg"></i>
+                            <i class="bi bi-plus-lg text-white"></i>
                             <input type="file" (change)="on3DFileSelected($event)" accept=".stl" multiple hidden>
                         </label>
                     </div>
@@ -112,7 +110,7 @@
                         <div *ngIf="selected3DFiles.length > 0" class="row">
                             <div *ngFor="let file of selected3DFiles; let i = index" class="col-4 p-2">
                                 <div
-                                    class="position-relative image-container rounded bg-dc-2 d-flex justify-content-center">
+                                    class="card-hover position-relative image-container rounded bg-dc-2 d-flex justify-content-center">
                                     <i class="bi bi-box text-center" style="font-size: 8rem; color: white;"
                                         (click)="open3DModal(i)"></i>
 
@@ -127,7 +125,7 @@
                                     <button type="button"
                                         class="btn btn-danger position-absolute top-0 end-0 rounded-circle"
                                         (click)="remove3DFile(i)">
-                                        <i class="bi bi-x"></i>
+                                        <i class="bi bi-x text-white"></i>
                                     </button>
                                 </div>
                             </div>
